2007-08-15  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Mailer/SOGoMailAccounts.m ([-fetchAllIdentities]):
	removed method.
	([-fetchIdentitiesWithEmitterPermissions]): removed method.
	([SOGoMailAccounts -toManyRelationshipKeys]): rewrote method to
	return the name of the mail accounts now available with the
	-[SOGoUser mailAccounts] method.

	* SoObjects/Mailer/SOGoUser+Mail.[hm]: removed useless class
	extension module.

	* SoObjects/Mailer/SOGoMailIdentity.[hm]: removed useless class
	module.

	* SoObjects/SOGo/NSArray+Utilities.m ([NSArray
	-keysWithFormat:format]): method that forward the method of the
	same name to each member of the array, considering they all are
	instances of NSDictionary.
	([NSArray -objectsForKey:key]): same principle as above.
	([NSArray -flattenedArray]): new method that transforms an array
	of arrays into a single array containing all the elements of the
	subarrays.

	* SoObjects/SOGo/NSDictionary+Utilities.m ([NSDictionary
	-keysWithFormat:keyFormat]): new method inspired by the python
	string formatting system and which replaces occurences of "%{key}"
	by the corresponding keys.

2007-08-13  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* Main/SOGo.m ([SOGo -run]): check for channel-type specific
	sql script before the generic one when initializing mandatory
	system tables.

2007-08-09  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/NSString+Utilities.m ([NSString
	-pureEMailAddress]): new utility method inspired by the
	"_rawSender" private method in SOGoDraftObject, which it now
	replaces.

	* SoObjects/SOGo/SOGoMailer.m: new abstraction class module that
	provides a common API for sending emails, no matter what the
	transport is.

2007-08-08  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/MailerUI/UIxMailFolderActions.m ([UIxMailFolderActions
	-quotasAction]): invoke "relativeImap4Name" instead of
	"nameInContainer" since the latter also returns the "folder"
	prefix.
